TT ch4 review comment
Co-Authored-By: Tiffany A. Timbers <tiffany.timbers@gmail.com>

--- a/03-viz.Rmd
+++ b/03-viz.Rmd
@@ -41,7 +41,7 @@ are external references that contain a wealth of additional information on the t
 ## Choosing the visualization
 #### *Ask a question, and answer it* {-#my-section}
 
-The purpose of a visualization is to answer a question about a dataset of interest. So naturally, the first thing to do when creating 
+The purpose of a visualization is to answer a question about a dataset of interest. So naturally, the first thing to do **before** creating 
 a visualization is to formulate the question about the data that you are trying to answer. 
 A good visualization will answer your question in a clear way without distraction; a *great* visualization will suggest even what the question
 was itself without additional explanation. Imagine your visualization as part of a poster presentation for your project; even if you aren't standing
