--- a/03-viz.Rmd
+++ b/03-viz.Rmd
@@ -20,7 +20,7 @@ are external references that contain a wealth of additional information on the t
     - line plots
     - bar plots 
     - histogram plots
-- Given a dataset and a question, select from the above plot types to create a visualization that best answers the question
+- Given a data set and a question, select from the above plot types to create a visualization that best answers the question
 - Given a visualization and a question, evaluate the effectiveness of the visualization and suggest improvements to better answer the question
 - Identify rules of thumb for creating effective visualizations 
 - Define the three key aspects of ggplot objects:
@@ -41,7 +41,7 @@ are external references that contain a wealth of additional information on the t
 ## Choosing the visualization
 #### *Ask a question, and answer it* {-#my-section}
 
-The purpose of a visualization is to answer a question about a dataset of interest. So naturally, the first thing to do **before** creating 
+The purpose of a visualization is to answer a question about a data set of interest. So naturally, the first thing to do **before** creating 
 a visualization is to formulate the question about the data that you are trying to answer. 
 A good visualization will answer your question in a clear way without distraction; a *great* visualization will suggest even what the question
 was itself without additional explanation. Imagine your visualization as part of a poster presentation for your project; even if you aren't standing
@@ -55,8 +55,8 @@ As with most coding tasks, it is totally fine (and quite common) to make mistake
 the right visualization for your data and question. There are [many different kinds of plotting graphic](https://serialmentor.com/dataviz/directory-of-visualizations.html) available 
 to use. For the kinds we will introduce in this course, the general rules of thumb are:
 
-- **line plots** visualize trends with respect to an independent quantity (e.g. time)
-- **histograms** visualize the distribution of one quantitative variable
+- **line plots** visualize trends with respect to an independent, ordered quantity (e.g. time)
+- **histograms** visualize the distribution of one quantitative variable (i.e., all its possible values and how often they occur) 
 - **scatter plots** visualize the distribution / relationship of two quantitative variables
 - **bar plots** visualize comparisons of amounts
 
@@ -73,8 +73,9 @@ again typically a better alternative.
 Just being able to make a visualization in R with `ggplot2` (or any other tool for that matter) doesn't mean that it is effective at communicating 
 your message to others. Once you have selected a broad type of visualization to use, you will have to refine it to suit your particular need.
 Some rules of thumb for doing this are listed below. They generally fall into two classes: you want to *make your
-visualization convey your message / answer the question more clearly*, and you want to *simplify the visualization / reduce visual noise*
-as much as possible.
+visualization convey your message*, and you want to *reduce visual noise* as much as possible. Humans have limited cognitive ability
+to process information; both of these types of refinement aim to reduce the mental load on your audience when viewing your visualization,
+making it easier for them to quickly understand and remember your message.
 
 **Convey the message**
 
@@ -99,16 +100,23 @@ as much as possible.
 ## Creating visualizations with `ggplot2` 
 #### *Build the visualization iteratively* {-#my-section}
 
-This section will cover examples of how to choose and refine a visualization given a dataset and a question that you want to answer, 
-and then how to create the visualization in R using `ggplot2`.
+This section will cover examples of how to choose and refine a visualization given a data set and a question that you want to answer, 
+and then how to create the visualization in R using `ggplot2`. To use the `ggplot2` library, we need to load the `tidyverse` metapackage.
 
-### The Mauna Loa CO2 dataset 
- This dataset contains the atmospheric concentration of carbon dioxide (CO2, in parts per million) at the Mauna Loa research station in Hawaii 
+```{r 03-tidyverse,, warning=FALSE, message=FALSE}
+library(tidyverse)
+```
+```{r 03-warn-off, echo = FALSE, results = 'hide', message = FALSE, warning = FALSE}
+options(warn=-1)
+```
+
+
+### The Mauna Loa CO2 data set 
+ This data set contains the atmospheric concentration of carbon dioxide (CO2, in parts per million) at the Mauna Loa research station in Hawaii 
 from the years 1959-1997. **Question:** Does the concentration of atmospheric CO2 change over time, and are there any interesting patterns to note?
-```{r 03-data-co2}
+```{r 03-data-co2, warning=FALSE, message=FALSE}
 # mauna loa carbon dioxide data 
-# (with some light wrangling to make it a dataframe with informative column names)
-co2_df <- data.frame(concentration = as.matrix(co2), date = time(co2))
+co2_df <- read_csv("data/maunaloa.csv")
 head(co2_df)
 ```
 
@@ -129,24 +137,22 @@ a few basic aspects of a plot that we need to specify:
 There are many other possible arguments we could pass to the aesthetic mapping and geometric object to change how the plot looks. For 
 the purposes of quickly testing things out to see what they look like, though, we can just go with the default settings:
 
-```{r 03-data-co2-scatter}
-co2_scatter <- ggplot(co2_df, aes(x = date, y = concentration)) + geom_point() 
-```
-```{r 03-data-co2-scatter-print, echo = FALSE, results = 'hide', message = FALSE, warning = FALSE}
-print(co2_scatter)
+```{r 03-data-co2-scatter, warning=FALSE, message=FALSE}
+co2_scatter <- ggplot(co2_df, aes(x = date, y = concentration)) + 
+		geom_point() 
+co2_scatter
 ```
 
 Certainly the visualization shows a clear upward trend in the atmospheric concentration of CO2 over time.
 This plot answers the first part of our question in the affirmative, but that appears to be the only conclusion one can make from the scatter visualization. 
-However, since time is an ordered quantity, we can try using a line plot instead using the `geom_line` geometric object. Line plots require
+However, since time is an ordered quantity, we can try using a line plot instead using the `geom_line` function. Line plots require
 that the data are ordered by their `x` coordinate, and connect the sequence of `x` and `y` coordinates with line segments. Let's again try this with just 
 the default arguments: 
 
-```{r 03-data-co2-line}
-co2_line <- ggplot(co2_df, aes(x = date, y = concentration)) + geom_line() 
-```
-```{r 03-data-co2-line-print, echo = FALSE, results = 'hide', message = FALSE, warning = FALSE}
-print(co2_line)
+```{r 03-data-co2-line, warning=FALSE, message=FALSE}
+co2_line <- ggplot(co2_df, aes(x = date, y = concentration)) + 
+		geom_line() 
+co2_line
 ```
 
 Aha! There *is* another interesting phenomenon in the data: in addition to increasing over time, the concentration seems to oscillate as well. 
@@ -158,16 +164,13 @@ Now that we have settled on the rough details of the visualization, it is time t
 visual noise to remove. But there are a few things we must do to improve clarity, such as adding informative axis labels and making the font a more readable size.
 In order to add axis labels we use the `xlab` and `ylab` functions. To change the font size we use the `theme` function with the `text` argument:
 
-```{r 03-data-co2-line-2}
+```{r 03-data-co2-line-2, warning=FALSE, message=FALSE}
 co2_line <- ggplot(co2_df, aes(x = date, y = concentration)) + 
                    geom_line() +
                    xlab('Year') +
                    ylab('Atmospheric CO2 (ppm)') + 
                    theme(text = element_text(size = 18))
-```
-
-```{r 03-data-co2-line-2-print, echo = FALSE, results = 'hide', message = FALSE, warning = FALSE}
-print(co2_line)
+co2_line
 ```
 
 Finally, let's see if we can better understand the oscillation by changing the visualization a little bit. Note that it is 
@@ -177,17 +180,14 @@ We scale the horizontal axis by using the `scale_x_continuous` function, and the
 We can transform the axis by passing the `trans` argument, and set limits by passing the `limits` argument. In particular, here we 
 will use the `scale_x_continuous` function with the `limits` argument to zoom in on just five years of data (say, 1990-1995):
 
-```{r 03-data-co2-line-3}
+```{r 03-data-co2-line-3, warning=FALSE, message=FALSE}
 co2_line <- ggplot(co2_df, aes(x = date, y = concentration)) + 
                    geom_line() +
                    xlab('Year') +
                    ylab('Atmospheric CO2 (ppm)') + 
                    scale_x_continuous(limits = c(1990, 1995)) +
                    theme(text = element_text(size = 18))
-```
-
-```{r 03-data-co2-line-3-print, echo = FALSE, results = 'hide', message = FALSE, warning = FALSE}
-print(co2_line)
+co2_line
 ```
 
 Interesting! It seems that each year, the atmospheric CO2 increases until it reaches its peak somewhere around April, decreases until around late September, 
@@ -195,26 +195,22 @@ and finally increases again until the end of the year. In Hawaii, there are two 
 Therefore, the oscillating pattern in CO2 matches up fairly closely with the two seasons.
 
 
-### The island landmass dataset
-This dataset contains a list of Earth's land masses as well as their area (in thousands of square miles). **Question:** Are the continents (North / South America, Africa, Europe, Asia, Australia, Antarctica) Earth's 7 largest landmasses? If so, what are the next few largest landmasses after those?
-```{r 03-data-islands}
+### The island landmass data set
+This data set contains a list of Earth's land masses as well as their area (in thousands of square miles). **Question:** Are the continents (North / South America, Africa, Europe, Asia, Australia, Antarctica) Earth's 7 largest landmasses? If so, what are the next few largest landmasses after those?
+```{r 03-data-islands, warning=FALSE, message=FALSE}
 # islands data 
-# (with some light wrangling to make it a dataframe with informative column names)
-islands_df <- enframe(islands)
-colnames(islands_df) <- c('landmass', 'size')
+islands_df <- read_csv("data/islands.csv")
 head(islands_df)
 ```
 Here, we have a list of Earth's landmasses, and are trying to compare their sizes. The right type of visualization to answer this
-question is a bar plot, specified by the `geom_bar` geometric object in `ggplot2`. However, by default, `geom_bar` sets the heights
+question is a bar plot, specified by the `geom_bar` function in `ggplot2`. However, by default, `geom_bar` sets the heights
 of bars to the number of times a value appears in a dataframe (its *count*); here we want to plot exactly the values in the dataframe, i.e.,
-the landmass sizes. So we have to pass the `stat="identity"` argument to `geom_bar`:
+the landmass sizes. So we have to pass the `stat = "identity"` argument to `geom_bar`:
 
-```{r 03-data-islands-bar}
-islands_bar <- ggplot(islands_df, aes(x = landmass, y=size)) + geom_bar(stat="identity")
-```
-
-```{r 03-data-islands-bar-print, echo = FALSE, results = 'hide', message = FALSE, warning = FALSE}
-print(islands_bar)
+```{r 03-data-islands-bar, warning=FALSE, message=FALSE}
+islands_bar <- ggplot(islands_df, aes(x = landmass, y = size)) + 
+			geom_bar(stat = "identity")
+islands_bar
 ```
 
 Alright, not bad! This is definitely the right kind of visualization, as we can clearly see and compare sizes of landmasses. The major 
@@ -224,14 +220,12 @@ landmasses; let's make the plot a little bit clearer by keeping only the largest
 Then to help us make sure the labels have enough space, we'll use horizontal bars instead of vertical ones. We do this using the 
 `coord_flip` function, which swaps the `x` and `y` coordinate axes:
 
-```{r 03-data-islands-bar-2}
+```{r 03-data-islands-bar-2, warning=FALSE, message=FALSE}
 islands_top12 <- top_n(islands_df, 12, size)
-islands_bar <- ggplot(islands_top12, aes(x = landmass, y=size)) + geom_bar(stat="identity") + coord_flip()
-
-```
-
-```{r 03-data-islands-bar-2-print, echo = FALSE, results = 'hide', message = FALSE, warning = FALSE}
-print(islands_bar)
+islands_bar <- ggplot(islands_top12, aes(x = landmass, y = size)) + 
+		geom_bar(stat = "identity") + 
+		coord_flip()
+islands_bar
 ```
 
 This is definitely clearer now, and allows us to answer our question ("are the top 7 largest landmasses continents?") in
@@ -239,7 +233,7 @@ the affirmative. But the question could be made clearer from the plot by organiz
 but by size, and to colour them based on whether or not they are a continent. In order to do this, we 
 use `mutate` to add a column to the data regarding whether or not the landmass is a continent:
 
-```{r 03-data-islands-bar-3}
+```{r 03-data-islands-bar-3, warning=FALSE, message=FALSE}
 islands_top12 <- top_n(islands_df, 12, size)
 continents <- c('Africa', 'Antarctica', 'Asia', 'Australia', 'Europe', 'North America', 'South America')
 islands_ct <- mutate(islands_top12, is_continent = ifelse(landmass %in% continents, 'Continent', 'Other'))
@@ -250,92 +244,80 @@ In order to colour the bars, we add the `fill` argument to the aesthetic mapping
 function in the aesthetic mapping to organize the landmasses by their `size` variable.
 Finally, we use the `labs` and `theme` functions to add labels, change the font size, and position the legend:
 
-```{r 03-data-islands-bar-4}
+```{r 03-data-islands-bar-4, warning=FALSE, message=FALSE}
 islands_bar <- ggplot(islands_ct, aes(x = reorder(landmass, size), y = size, fill = is_continent)) + 
                    geom_bar(stat="identity") +
                    labs(x = 'Landmass', y = 'Size (1000 square mi)', fill = 'Type') +
                    coord_flip() +
                    theme(text = element_text(size = 18), legend.position = c(0.75, 0.45))
-```
-
-```{r 03-data-islands-bar-4-print, echo = FALSE, results = 'hide', message = FALSE, warning = FALSE}
-print(islands_bar)
+islands_bar
 ```
 
 This is now a very effective visualization for answering our original questions. Landmasses are organized by their size,
 and continents are coloured differently than other landmasses, making it quite clear that continents are the largest 7 landmasses.
 
 
-### The Old Faithful eruption / waiting time dataset
-This dataset contains measurements of the waiting time between eruptions and the subsequent eruption duration (in minutes). **Question:** Is there a 
+### The Old Faithful eruption / waiting time data set
+This data set contains measurements of the waiting time between eruptions and the subsequent eruption duration (in minutes). **Question:** Is there a 
 relationship between the waiting time before an eruption to the duration of the eruption? 
 
-```{r 03-data-faithful}
+```{r 03-data-faithful, warning=FALSE, message=FALSE}
 # old faithful eruption time / wait time data
 head(faithful)
 ```
 
 Here again we are investigating the relationship between two quantitative variables (waiting time and eruption time). But if you look at the output of the `head` function, you'll notice that neither of the columns are ordered. So in this case, let's start again with a scatter plot:
 
-```{r 03-data-faithful-scatter}
-faithful_scatter <- ggplot(faithful, aes(x = waiting, y = eruptions)) + geom_point()  
-```
-```{r 03-data-faithful-scatter-print, echo = FALSE, results = 'hide', message = FALSE, warning = FALSE}
-print(faithful_scatter)
+```{r 03-data-faithful-scatter, warning=FALSE, message=FALSE}
+faithful_scatter <- ggplot(faithful, aes(x = waiting, y = eruptions)) + 
+			geom_point()  
+faithful_scatter
 ```
 
 We can see that the data tend to fall into two groups: one with a short waiting and eruption times, and one with long waiting and eruption 
 times. Note that in this case, there is no overplotting: the points are generally nicely visually separated, and the pattern they form is clear.
 In order to refine the visualization, we need only to add axis labels and make the font more readable:
 
-```{r 03-data-faithful-scatter-2}
+```{r 03-data-faithful-scatter-2, warning=FALSE, message=FALSE}
 faithful_scatter <- ggplot(faithful, aes(x = waiting, y = eruptions)) + 
                          geom_point() +
                          labs(x = 'Waiting Time (mins)', y = 'Eruption Duration (mins)') +
                          theme(text = element_text(size = 18))
-```
-```{r 03-data-faithful-scatter-2-print, echo = FALSE, results = 'hide', message = FALSE, warning = FALSE}
-print(faithful_scatter)
+faithful_scatter
 ```
 
-
-### The Michelson speed of light dataset
-This dataset contains measurements of the speed of light (in kilometres per second with 299,000 subtracted) from the year 1879 
+### The Michelson speed of light data set
+This data set contains measurements of the speed of light (in kilometres per second with 299,000 subtracted) from the year 1879 
 for 5 experiments, each with 20 consecutive runs. **Question:** Given what we know now about the speed of 
 light (299,792.458 kilometres per second), how accurate were each of the experiments?
-```{r 03-data-morley}
+```{r 03-data-morley, warning=FALSE, message=FALSE}
 # michelson morley experimental data
 head(morley)
 ```
 
-In this experimental data, Michelson was trying to measure just a single quantitative number (the speed of light). The dataset
+In this experimental data, Michelson was trying to measure just a single quantitative number (the speed of light). The data set
 contains many measurements of this single quantity. To tell how accurate the experiments were, we need to visualize the 
-distribution of the measurements. We can do this using a *histogram*. A histogram helps us visualize how a 
-particular variable is distributed in a dataset by separating the data into bins, and then using vertical bars 
+distribution of the measurements (i.e., all their possible values and how often each occurs). We can do this using a *histogram*. A histogram helps us visualize how a 
+particular variable is distributed in a data set by separating the data into bins, and then using vertical bars 
 to show how many data points fell in each bin. To create a histogram in `ggplot2` we will use the `geom_histogram` geometric
 object, setting the `x` axis to the `Speed` measurement variable; and as we did before, let's use the default arguments just to see how things look:
 
-```{r 03-data-morley-hist}
-morley_hist <- ggplot(morley, aes(x = Speed)) + geom_histogram() 
-```
-
-```{r 03-data-morley-hist-print, echo = FALSE, results = 'hide', message = FALSE, warning = FALSE}
-print(morley_hist)
+```{r 03-data-morley-hist, warning=FALSE, message=FALSE}
+morley_hist <- ggplot(morley, aes(x = Speed)) + 
+		geom_histogram() 
+morley_hist
 ```
 
 This is a great start. However, we cannot tell how accurate the measurements are using this visualization unless we can see what the true value is.
-In order to visualize the true speed of light, we will add a vertical line with the `geom_vline` geometric object, setting the `xintercept` argument
-to the true value. There is a similar geometric object, `geom_hline`, that is used for plotting horizontal lines. Note that *vertical lines*
+In order to visualize the true speed of light, we will add a vertical line with the `geom_vline` function, setting the `xintercept` argument
+to the true value. There is a similar function, `geom_hline`, that is used for plotting horizontal lines. Note that *vertical lines*
 are used to denote quantities on the *horizontal axis*, while *horizontal lines* are used to denote quantities on the *vertical axis*. 
 
-```{r 03-data-morley-hist-2}
+```{r 03-data-morley-hist-2, warning=FALSE, message=FALSE}
 morley_hist <- ggplot(morley, aes(x = Speed)) + 
                  geom_histogram() +
-                 geom_vline(xintercept = 792.458, linetype="dashed", size=1.0)
-```
-
-```{r 03-data-morley-hist-2-print, echo = FALSE, results = 'hide', message = FALSE, warning = FALSE}
-print(morley_hist)
+                 geom_vline(xintercept = 792.458, linetype = "dashed", size = 1.0)
+morley_hist
 ```
 
 We also still cannot tell which experiments (denoted in the `Expt` column) led to which measurements; perhaps some experiments were more accurate than
@@ -346,14 +328,11 @@ it to the `fill` aesthetic mapping. We make sure the different colours can
 be seen (despite them all sitting on top of each other) by setting the `alpha` argument in `geom_histogram`
 to `0.5` to make the bars slightly translucent:
 
-```{r 03-data-morley-hist-3}
-morley_hist <- ggplot(morley, aes(x = Speed, fill=factor(Expt))) + 
-                 geom_histogram(position="identity", alpha=0.5) +
-                 geom_vline(xintercept = 792.458, linetype="dashed", size=1.0)
-```
-
-```{r 03-data-morley-hist-3-print, echo = FALSE, results = 'hide', message = FALSE, warning = FALSE}
-print(morley_hist)
+```{r 03-data-morley-hist-3, warning=FALSE, message=FALSE}
+morley_hist <- ggplot(morley, aes(x = Speed, fill = factor(Expt))) + 
+                 geom_histogram(position = "identity", alpha = 0.5) +
+                 geom_vline(xintercept = 792.458, linetype = "dashed", size = 1.0)
+morley_hist
 ```
 
 Unfortunately, the attempt to separate out the experiment number visually has created a bit of a mess. All of the colours
@@ -367,15 +346,12 @@ where `veritcal_variable` is used to split the plot vertically, `horizontal_vari
 along that axis. In our case
 we only want to split vertically along the `Expt` variable, so we use `Expt ~ .` as the argument to `facet_grid`.
 
-```{r 03-data-morley-hist-4}
-morley_hist <- ggplot(morley, aes(x = Speed, fill=factor(Expt))) + 
-                 geom_histogram(position="identity") +
+```{r 03-data-morley-hist-4, warning=FALSE, message=FALSE}
+morley_hist <- ggplot(morley, aes(x = Speed, fill = factor(Expt))) + 
+                 geom_histogram(position = "identity") +
                  facet_grid(Expt ~ .) +
-                 geom_vline(xintercept = 792.458, linetype="dashed", size=1.0)
-```
-
-```{r 03-data-morley-hist-4-print, echo = FALSE, results = 'hide', message = FALSE, warning = FALSE}
-print(morley_hist)
+                 geom_vline(xintercept = 792.458, linetype = "dashed", size = 1.0)
+morley_hist
 ```
 
 The visualization now makes it quite clear how accurate the different experiments were with respect to one another. 
@@ -384,18 +360,15 @@ using the `labs` function, and increase the font size to make it readable using 
 is easy to compare the experiments on this plot to one another, it is hard to get a sense 
 for just how accurate all the experiments were overall. For example, how accurate is the value 800 on the plot, relative to the true speed of light?
 To answer this question we'll use the `mutate` function to transform our data into a relative measure of accuracy rather than absolute measurements:
-```{r 03-data-morley-hist-5}
+```{r 03-data-morley-hist-5, warning=FALSE, message=FALSE}
 morley_rel <- mutate(morley, relative_accuracy = 100*( (299000 + Speed) - 299792.458 ) / (299792.458))
-morley_hist <- ggplot(morley_rel, aes(x = relative_accuracy, fill=factor(Expt))) + 
-                 geom_histogram(position="identity") +
+morley_hist <- ggplot(morley_rel, aes(x = relative_accuracy, fill = factor(Expt))) + 
+                 geom_histogram(position = "identity") +
                  facet_grid(Expt ~ .) +
-                 geom_vline(xintercept = 0, linetype="dashed", size=1.0) + 
+                 geom_vline(xintercept = 0, linetype = "dashed", size = 1.0) + 
                  labs(x = 'Relative Accuracy (%)', y = '# Measurements', fill = 'Experiment ID') + 
                  theme(text = element_text(size = 18))
-```
-
-```{r 03-data-morley-hist-5-print, echo = FALSE, results = 'hide', message = FALSE, warning = FALSE}
-print(morley_hist)
+morley_hist
 ```
 
 Wow, impressive! These measurements of the speed of light from 1879 had errors around *0.05%* of the true speed. This shows
@@ -420,7 +393,7 @@ Regardless of where it appears, a good way to discuss your visualization is as a
    can emphasize different aspects based on what is important to answering your question:
     - **trends (lines):** Does a line describe the trend well? If so, the trend is *linear*, and if not, the trend is *nonlinear*. Is the trend increasing, decreasing, or neither?
                         Is there a periodic oscillation (wiggle) in the trend? Is the trend noisy (does the line "jump around" a lot) or smooth?
-    - **distributions (scatters, histograms):** How spread out is the distribution? Where is it centered, roughly? Are there any obvious "clusters" or "subgroups", which would be visible as multiple bumps in the histogram?  
+    - **distributions (scatters, histograms):** How spread out are the data? Where are they centered, roughly? Are there any obvious "clusters" or "subgroups", which would be visible as multiple bumps in the histogram?  
     - **distributions of two variables (scatters):** is there a clear / strong relationship between the variables (points fall in a distinct pattern), a weak one (points fall in a pattern but there is some noise), or no discernible
       relationship (the data are too noisy to make any conclusion)?
     - **amounts (bars):** How large are the bars relative to one another? Are there patterns in different groups of bars? 
@@ -431,7 +404,7 @@ Each of the steps is denoted by its numeral in parentheses, e.g. (3).
 
 **Mauna Loa Atmospheric CO2 Measurements:** (1) Many current forms of energy generation and conversion---from automotive engines to natural gas power plants---rely on burning
 fossil fuels and produce greenhouse gases, typically primarily carbon dioxide (CO2), as a byproduct. Too much of these gases in the Earth's atmosphere will cause it to trap
-more heat from the sun, leading to global warming. (2) In order to assess how quickly the atmospheric concentration of CO2 is increasing over time, we (3) used a dataset from
+more heat from the sun, leading to global warming. (2) In order to assess how quickly the atmospheric concentration of CO2 is increasing over time, we (3) used a data set from
 the Mauna Loa observatory from Hawaii, consisting of CO2 measurements from 1959 to the present. We plotted the measured concentration of CO2 (on the vertical axis) over time
 (on the horizontal axis). From this plot you can see a clear, increasing, and generally linear trend over time. There is also a periodic oscillation that occurs once per year and
 aligns with Hawaii's seasons, with an amplitude that is small relative to the growth in the overall trend. This shows that atmospheric CO2 is clearly increasing over 
@@ -445,14 +418,14 @@ experiments produce more accurate results than others?
 The horizontal axis shows the accuracy of the measurements relative to the true speed of light as we know it today, expressed as a percentage.
 From this visualization you can see that most results had relative errors of at most 0.05%. You can also see that experiments 1 and 3 had
 measurements that were the farthest from the true value, and experiment 5 tended to provide the most consistently accurate result. (4) It would be
-worth further investigation into the differences between these experiments to see why they produced different result distributions.
+worth further investigation into the differences between these experiments to see why they produced different results.
 
 
 
 ## Saving the visualization
 #### *Choose the right output format for your needs* {-#my-section}
 
-Just as there are many ways to store datasets, there are many ways to store visualizations and images.
+Just as there are many ways to store data sets, there are many ways to store visualizations and images.
 Which one you choose can depend on a number of factors, such as file size/type limitations 
 (e.g., if you are submitting your visualization as part of a conference paper or to a poster printing shop)
 and where it will be displayed (e.g., online, in a paper, on a poster, on a billboard, in talk slides).
@@ -466,14 +439,14 @@ Generally speaking, images come in two flavours: *bitmap* (or *raster*) formats 
     - [PNG](https://en.wikipedia.org/wiki/Portable_Network_Graphics) (`.png`): lossless, usually used for plots / line drawings
     - [BMP](https://en.wikipedia.org/wiki/BMP_file_format) (`.bmp`): lossless, raw image data, no compression (rarely used)
     - [TIFF](https://en.wikipedia.org/wiki/TIFF) (`.tif`, `.tiff`): typically lossless, no compression, used mostly in graphic arts, publishing
-- *Free Editing software:* [GIMP](https://www.gimp.org/), [JS Paint](https://jspaint.app)
+- *Open-source software:* [GIMP](https://www.gimp.org/)
 
 **Vector / Scalable Graphics** images are represented as a collection of mathematical objects (lines, surfaces, shapes, curves). When the computer displays the image, it redraws all of the elements using their mathematical formulas.
 
 - *Common file types:* 
     - [SVG](https://en.wikipedia.org/wiki/Scalable_Vector_Graphics) (`.svg`): general-purpose use 
     - [EPS](https://en.wikipedia.org/wiki/Encapsulated_PostScript) (`.eps`), general-purpose use (rarely used)
-- *Free Editing software:* [Inkscape](https://inkscape.org/), [Boxy SVG](https://boxy-svg.com/)
+- *Open-source software:* [Inkscape](https://inkscape.org/)
 
 Raster and vector images have opposing advantages and disadvantages. A raster image of a fixed width / height takes the same amount of space and time to load regardless of 
 what the image shows (caveat: the compression algorithms may shrink the image more or run faster for certain images). A vector image takes space and time to load 
@@ -490,15 +463,14 @@ vector graphics as much as you like without the image looking bad, while raster 
 
 
 Let's investigate how different image file formats behave with a scatter plot of the
-[Old Faithful dataset](https://www.stat.cmu.edu/~larry/all-of-statistics/=data/faithful.dat), which happens to be available in base R under the name `faithful`:
+[Old Faithful data set](https://www.stat.cmu.edu/~larry/all-of-statistics/=data/faithful.dat), which happens to be available in base R under the name `faithful`:
 
-```{r 03-plot-line, collapse=TRUE}
-library(tidyverse)
+```{r 03-plot-line, collapse=TRUE, warning=FALSE, message=FALSE}
 library(svglite) #we need this to save SVG files
-faithful_plot <- ggplot(data=faithful, aes(x=waiting, y=eruptions))+
+faithful_plot <- ggplot(data = faithful, aes(x = waiting, y = eruptions))+
   geom_point()
 
-print(faithful_plot)
+faithful_plot
 
 ggsave('faithful_plot.png', faithful_plot)
 ggsave('faithful_plot.jpg', faithful_plot)
@@ -506,11 +478,11 @@ ggsave('faithful_plot.bmp', faithful_plot)
 ggsave('faithful_plot.tiff', faithful_plot)
 ggsave('faithful_plot.svg', faithful_plot)
 
-print(paste("PNG filesize: ", file.info('faithful_plot.png')['size']/1000000, "MB"))
-print(paste("JPG filesize: ", file.info('faithful_plot.jpg')['size']/1000000, "MB"))
-print(paste("BMP filesize: ", file.info('faithful_plot.bmp')['size']/1000000, "MB"))
-print(paste("TIFF filesize: ", file.info('faithful_plot.tiff')['size']/1000000, "MB"))
-print(paste("SVG filesize: ", file.info('faithful_plot.svg')['size']/1000000, "MB"))
+print(paste("PNG filesize: ", file.info('faithful_plot.png')['size'] / 1000000, "MB"))
+print(paste("JPG filesize: ", file.info('faithful_plot.jpg')['size'] / 1000000, "MB"))
+print(paste("BMP filesize: ", file.info('faithful_plot.bmp')['size'] / 1000000, "MB"))
+print(paste("TIFF filesize: ", file.info('faithful_plot.tiff')['size'] / 1000000, "MB"))
+print(paste("SVG filesize: ", file.info('faithful_plot.svg')['size'] / 1000000, "MB"))
 ```
 Wow, that's quite a difference! Notice that for such a simple plot with few graphical elements (points), the vector graphics format (SVG) is over 100 
 times smaller than the uncompressed raster images (BMP, TIFF). Also note that the JPG format is twice as large as the PNG format, since the JPG
