--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -1,9 +1,9 @@
-# Classification continued {#classification_continued}
+# Classification II: Tuning & Testing {#classification_continued}
 
 ## Overview 
 Metrics for classification accuracy; cross-validation to choose the number of neighbours; scaling of variables and other practical considerations.
 
-## Learning objectives 
+## Chapter learning objectives 
 By the end of the chapter, students will be able to:
 
 * Describe what a validation data set is and how it is used in classification.
