--- a/09-regression3.Rmd
+++ b/09-regression3.Rmd
@@ -3,7 +3,7 @@
 ## Overview 
 This week we will work through some examples of multiple regression in the prediction context. We will emphasize the interpretation and relevance of the mix of negative/positive slopes in this context. We will then discuss another application of regression; modelling the relationship between two or more variables so that we can better understand or describe it. We will emphasize that this is a jumping off point for the study of statistical inference.
 
-## Learning objectives 
+## Chapter learning objectives 
 By the end of the chapter, students will be able to:
 
 * In a dataset with > 2 variables, perform k-nn regression in R using `caret`'s `train` with `method = "k-nn"` to predict the values for a test dataset.
