--- a/10-clustering.Rmd
+++ b/10-clustering.Rmd
@@ -3,7 +3,7 @@
 ## Overview 
 Introduction to clustering using K-means. Will discuss the K-means algorithm, how we choose K (the number of clusters) and other practical considerations (such as scaling).
 
-## Learning objectives 
+## Chapter learning objectives 
 By the end of the chapter, students will be able to:
 
 * Describe a case where clustering would be an appropriate tool, and what insight it would bring from the data.
