--- a/07-regression1.Rmd
+++ b/07-regression1.Rmd
@@ -3,7 +3,7 @@
 ## Overview 
 Introduction to regression using K-nearest neighbours (k-nn). We will focus on prediction in cases where there is a response variable of interest and a single explanatory variable.
 
-## Learning objectives 
+## Chapter learning objectives 
 By the end of the chapter, students will be able to:
 
 * Recognize situations where a simple regression analysis would be appropriate for making predictions.
