--- a/08-regression2.Rmd
+++ b/08-regression2.Rmd
@@ -3,7 +3,7 @@
 ## Overview 
 Introduction to linear regression models. We will also begin to compare k-nn to linear models in the context of regression.
 
-## Learning objectives 
+## Chapter learning objectives 
 By the end of the chapter, students will be able to:
 
 * In the context of k-nn regression, compare and contrast goodness of fit and prediction properties (namely RMSE vs RMSPE).
