working through ch6 writing

--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -35,28 +35,36 @@ networks.
 
 ## Exploring a labelled data set
 
-Let's start by looking at some Breast Cancer [data](http://archive.ics.uci.edu/ml/datasets/Breast+Cancer+Wisconsin+%28Diagnostic%29), which was obtained from the University of Wisconsin Hospitals, Madison from Dr. William H. Wolberg. Each row in the data set represents an observation which includes the tumour diagnosis (benign/non-cancerous or malignant/cancerous) and several other measurements about the tumour cells (e.g., cell nuclei texture, perimeter, etc.). Diagnosis of the tumour was determined by Physicians. The question here is whether we can use some, or all, of the measurements available to us about the tumour cells to do a good job of predicting whether a future tumour, that we don't have a diagnosis from a Physician for, is benign or malignant. 
+In this chapter and the next, we will study a data set of [digitized breast cancer image features](http://archive.ics.uci.edu/ml/datasets/Breast+Cancer+Wisconsin+%28Diagnostic%29), 
+created by Dr. William H. Wolberg, W. Nick Street, and Olvi L. Mangasarian at the University of Wisconsin, Madison. Each row in the data set represents an 
+observation of a tumour cell nucleus, including the diagnosis (benign or malignant) and several other measurements 
+(e.g., nucleus texture, perimeter, area, etc.). Diagnosis of each cell was conducted by physicians. 
 
-Answering this question is important because traditional, non-data driven methods for tumour diagnosis are quite subjective and dependent upon how skilled and experienced the diagnosing Physician is. Furthermore, benign tumours are not normally dangerous, the cells stay in the same place and the tumour stops growing before it gets very large, whereas in malignant tumours, the cells invade the surrounding tissue and spread into nearby organs where they can cause serious damage ([Learn more here](https://www.worldwidecancerresearch.org/who-we-are/cancer-basics/)). Thus it is important to quickly and accurately diagnose the tumour type to guide patient treatment protocols.
- 
-<!--http://archive.ics.uci.edu/ml/machine-learning-databases/breast-cancer-wisconsin/wdbc.names-->
+As with all data analyses, we first need to formulate a precise question that we want to answer. Here, the question is of a *predictive* nature: can 
+we use some, or all, of the measurements available to us about the tumour cells to do a good job of predicting whether a future tumour cell (with unknown diagnosis)
+is benign or malignant? Answering this question is important because traditional, non-data-driven methods for tumour diagnosis are quite subjective and 
+dependent upon how skilled and experienced the diagnosing physician is. Furthermore, benign tumours are not normally dangerous; the cells stay in the same 
+place and the tumour stops growing before it gets very large. By contrast, in malignant tumours, the cells invade the surrounding tissue and spread into nearby organs 
+where they can cause serious damage ([learn more about cancer here](https://www.worldwidecancerresearch.org/who-we-are/cancer-basics/)). Thus, it is important to quickly 
+and accurately diagnose the tumour type to guide patient treatment protocols.
 
-**Data Exploration**
-
-As usual, we start by loading the necessary libraries for our analysis. We have learned about the `tidyverse` before. Today we'll also be loading a new library, `forcats` that allows us to easily manipulate factors in R. Factors are a special categorical type of variable in R that are very helpful when doing statistical inference and machine learning with categorical variables.
+Our first step is to load, wrangle, and explore the data using visualizations in order to better understand the data we are working with.
+We start by loading the necessary libraries for our analysis. Below you'll see (in addition to the usual `tidyverse`) a new library, `forcats`, that 
+enables us to easily manipulate factors in R. Factors are a special categorical type of variable in R that are very helpful when doing statistical inference and 
+machine learning with categorical variables.
 
 ```{r 05-load-libraries, message = FALSE}
 library(tidyverse)
 library(forcats)
 ```
 
-The data file we need to read in is a plain vanilla csv with headers, and thus we can use the `read_csv` function with no additional arguments:
+In this case, the file containing the breast cancer data set is a simple `.csv` file with headers. We'll use the `read_csv` function with no additional arguments,
+and then the `head` function to inspect its contents:
 
 ```{r 05-read-data, message = FALSE}
 cancer <- read_csv("data/clean-wdbc.data.csv")
 head(cancer)
 ```
-
 
 **Variable descriptions**
 
