minor typo fixes in classification I

--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -14,8 +14,8 @@ choose the parameters of the classifier in order to maximize its accuracy.
 - Identify when it is necessary to center and scale variables before classification and do this using R
 - Interpret the output of a classifier
 - Compute, by hand, the straight-line (Euclidean) distance between points on a graph when there are two explanatory variables/predictors
-- Explain the k-nearest neighbour classification algorithm
-- Perform k-nearest neighbour classification in R using `caret::train(method = "knn", ...)`
+- Explain the K-nearest neighbour classification algorithm
+- Perform K-nearest neighbour classification in R using `caret::train(method = "knn", ...)`
 
 ## The classification problem
 In many situations, we want to make predictions based on the current situation as well as past experiences. For instance, a doctor may want to diagnose 
@@ -421,7 +421,7 @@ choose $K$ in the next chapter. We will use "knn" as our `method`.
 k <- data.frame(k = 5)
 model_knn <- train(x = data.frame(cancer_train), y = cancer_labels, method='knn', tuneGrid = k)
 ```
-> **Note:** the `caret` package expects `data.frames` and not `tibbles` (which are special kind data frames). This is a 
+> **Note:** the `caret` package expects `data.frames` and not `tibbles` (a special kind of data frames). This is a 
 > bit annoying, and will likely change in the future, but for now we have to change `tibbles` to `data.frames` when using `caret`.
 
 Now we can create a `data.frame` with our new observation and predict the label of the new observation using the `predict` function:
